src/app/tab1/tab1.page.scss
$background: #535353;
$color:#fff;



::ng-deep ion-content {
  --background: #535353!important;
  --background-size: 400% 400% !important;
  animation: gradient 15s ease infinite !important;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }

  50% {
    background-position: 100% 50%;
  } 

  100% {
    background-position: 0% 50%;
  }
}

.input {
  width: 100%;
}

.form {
  width: 100%;
}

.item-native::part(native) {
  border: none !important;
}

.select-class {
  border-radius: 6px;
  outline: none;
  background-color: white;
  color: #000;
}

ion-input {
  border: 1px solid lightgray;
  color: $color !important;
  padding-left: 0.5rem;
}

.search-row {
  width: 97%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  margin-bottom: 3vh;

}

.accordion-grp {
  padding: 1vh;
}

.input-wrapper {
  display: flex;
  align-items: center;
  ion-input {
    height: 28px;
    border-radius: 0;
  }
}

.accordion {
  border: 2px solid #fff;
  border-radius: 5px;
  background: transparent;

}

.accordion-label {
  color: $color !important;
}

.list {
  background: transparent;
  height: 84vh;
  overflow: hidden;
  padding-bottom: 2rem;
  position: relative;

}

.search-box {
  margin-top: 3vh;
  color: $color;
}

ion-accordion-group {
  ion-accordion {
    .ion-accordion-toggle-icon {
      font-size: 50px;
      color: red;
    }
  }
}

form {
  ion-button::part(native) {
    padding: 0;
    --background:#535353;
    box-shadow: none;
      --background-hover:none;
      padding: 0;
  }
  select,.datepicker {
    width: 100%;
  }
  .row-add,.row-delete {
    width: 100%;
    max-width: fit-content;
  }
  .row-add {
    max-width: fit-content;
    ion-button {
      margin: 0;
    }
  }
  .disablebutton {
    color: grey;
  }
  ion-input {
    height: 28px;
  } 
  .range1 {
    --border-radius: 0;
  }

}

.save-btn {
  text-align: center;
}

.no-saved-presets {
 display: flex;
 align-items: center;
 justify-content: space-between;
 .plus-button {
  margin-right: 1rem;
 }
 ion-text {
  margin-left: 1rem;
 }
}
.save-btn1 {
  ion-button {
    font-size: large;
    --background:#535353;
   
    }
  .plus-button::part(native) {
    box-shadow: none;
    --background-hover:none;
    padding: 0;
  }
}
select::-ms-expand {
  display: none;
}
select {
  -moz-appearance: none;
  -webkit-appearance: none;
    padding-left: 0.5rem;
}
.select-item select {
  -moz-appearance: none;
  -webkit-appearance: none;
}

.select-search {
  display: flex;
  width: 100%;
  align-items: center;
  .span-presets {
    color: white;
    width: inherit;
    max-width: fit-content;
  }

}

.search-row-select {
  margin: auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding-left: 1rem;
  padding-right: 1rem;

  .select-class {
    width: 100%;
  }

  
  .select-item {
    width:250px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    display: flex;
    align-items: center;
    gap: 1rem;
    select {
      height: 28px;
      border:none;
      background-color:#535353;
      padding-left: 1rem;
      color: white;
      option {
        background-color: #333333;
      }
    }
  }

}

.modi-btn{
  text-align: center;
  margin:1rem;
  padding :10px;
} 
.btn-group {
  display: flex !important;
  justify-content: space-between !important;
  width: 100% !important;
  margin: 0.5rem 0px;
}

.clear-filter {
  display: flex !important;
  justify-content: flex-start !important;
}

.apply-filter {
  display: flex !important;
  justify-content: flex-end !important;
}

.apply-btn::part(native)  {
 
  padding: 1rem !important;
  color: #dddddd;
  background-color:$background;
}

.save::part(native) {
  background: green;
}

.item-interactive::part(native) {
  border: 0px !important;
  background: transparent;
  border: none !important;

}

ion-item::part(native) {
  background: transparent !important;
  border: none !important;
}

.search-select {
  text-align: center;
  font-size: 2vh;
  color: $color !important;
}

.select-options {
  color: black !important;
}
.select-options::placeholder {
  background-color: #008000;
}
.select-options {
  width: 150px;

}

input::placeholder {
  color: red;
}


ion-item:not(.item-label) .sc-ion-input-md-h,ion-item:not(.item-label) .sc-ion-input-ios-h {
  --padding-start: 1vh;
  --color: white !important;
  caret-color: black !important;
}

.no-presets {
  font-size: 24px;
  display: flex;
  justify-content: center;
  color: $color;
}

.item-native::part(native) {
  display: flex !important;
  flex-direction: column !important;
  border: none !important;
  margin-top: 4vh;
}


.form-wrapper {
  display: block !important;
  flex-direction: column !important;
    overflow: overlay;
    height: 77vh;
     padding-top: 0.5rem
}

.abc {
  width: 100%;
}
.example-box {
  display: flex;
  align-items: center;
  ion-item {
    padding: 0;
    ion-row {
      padding :0;
    }
  } 
}

.row-add {
  text-align: right;
}

.save-row {
  width: 100%;
  border: none !important;
}
.selectbtn{
  background-color:#008000;
  color:#ffffff;
  padding: 0.5rem 0.7rem;
  border-radius:4px;
  font-size: 14px;
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
    0 8px 10px 1px rgba(0, 0, 0, 0.14),
    0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
  background-color: rgba(0, 0, 0, 0.6) !important;
  opacity: 0;
  cursor: grabbing;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.example-box {
  cursor: grab;
}

.success {
  color: #008000;
}

.error {
  color: red !important;
  border: 1px solid red !important;
}

.warning {
  color: orange;
}

.delete-preset::part(native) {
  background-color: red;
  color: white;
}


label {
  display: block;
  font: 1rem 'Fira Sans', sans-serif;
}

input,
label {
  margin: .4rem 0;
}

#start {
  padding: 7px 10px !important;
  background: transparent;
  border: 1px solid #d0c9c9;
  border-radius: 4px;
  margin-bottom: 2rem;
  margin-top: 0px !important;
  color: white !important;
  // background: black;
  height: 5vh;
}

#end {
  padding: 7px 10px !important;
  background: transparent;
  border: 1px solid #d0c9c9;
  border-radius: 4px;
  margin-bottom: 2rem;
  margin-top: 0px !important;
  color: white !important;
  background: transparent !important;
  height: 5vh;
}

.mat-form ::ng-deep .mat-calendar-body-cell-container {
  background-color: pink !important;
  width: 100px !important;
  height: 100px !important;
}

.range-picker ::ng-deep .mat-calendar-body-cell-container {
  background-color: rgb(192, 255, 219) !important;
  width: 100px !important;
  height: 100px !important;
}

.date-input {
  background: #000;
}

.toggle ::ng-deep .mat-calendar-body-cell-container {
  background-color: rgb(214, 18, 51) !important;
  width: 100px !important;
  height: 100px !important;
}

::ng-deep.easepick-wrapper {
  .container {
    background-color: red
  }
}



ul li ul {
  display: none; /* Hide the nested list first */
}
ul li.active ul {
  display: block; /* Show the list when class 'active' is added to the li */ 
  color: red;
}
.dropdown-toggle::after {
  display: none;
}
.dropdown-menu.show  {
  background-color: #333333;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
    0 8px 10px 1px rgba(0, 0, 0, 0.14),
    0 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.dropdown-item {
  color: #dddddd;
}
.dropdown-item:hover {
  background-color: $background;
}

::ng-deep .modal-dialog {
  top: 40%;
 
.modal-content  {
  width: fit-content;
  margin: auto;
  background-color: #393737;
  color: white;
  button {
  color: #dddddd;
  background-color: $background;
  }
}
} 

// Dropdown styles for presets list

::ng-deep .sc-ion-select-popover-md-h ion-list.sc-ion-select-popover-md,::ng-deep .sc-ion-select-popover-ios-h ion-list.sc-ion-select-popover-ios
 {
   background-color: #333333;
  ion-item {
    --background:#333333;
    --background-hover:white;
    --color:white;
    --background-focused:#d4c9c9;
    --background-hover-opacity:0.1;
  }
  .unfocusFirstelement.ion-focused::part(native)::after {
    opacity: 0!important; 
  }
  .unfocusFirstelement.ion-focused::part(native):hover {
    background-color:$background;
  }
}


.select-class {
  --height:20px
 max-width : 211px;
  
}
  
.item-radio-checked.sc-ion-select-popover-md,.item-radio-checked.sc-ion-select-popover-ios {
    --background:#333333;
    --background-focused:#d4c9c9;
    --background-hover: none;
    --ripple-color:red;
    --background-hover-opacity:0;
    --highlight-color-focused:#d4c9c9;
  }

#presets-select {
  background-color: $background;
  --placeholder-color:white;
  --placeholder-opacity:none;
  color: white;
  max-width: min-content;
  width: 250px;
  
}
.range , .datepicker{
  --placeholder-color:white;
  --placeholder-opacity:none;
  --padding-start:0.5rem;
  color: white;
}


#presets-select::part(icon) {
  content: url(../../assets/icon/dropdown.svg);
  padding-right: 6rem;
}

.select-class {
  background-image: url(../../assets/icon/dark-dropdown.svg);
  background-repeat: no-repeat;
  background-position-x: 98%;
  background-position-y: center;
  background-size: 19px,19px;
  height: 28px;
}


.select-class::part(icon) {
  display: none;
  
   }
// ion-date time 
ion-datetime {
  position: absolute;
  top: 2.05rem;
  width: 100%;
  z-index: 1000;
}

.input-range {
  position: relative;
  ::ng-deep .clear-param3 {
    position: absolute;
    right: 0.65rem;
    z-index: 999;
    bottom: 0.25rem; 
    height: auto;
  }
}
.input-range-end {
  position: relative;
  ::ng-deep .clear-param4 {
    position: absolute;
      right: 0.65rem;
      /* top: 0rem; */
      bottom: 0.25rem;
      z-index: 999;
    height: auto;

  }

}

.disable-preset-menu {
  color: #dddddd;
  background-color:inherit;
  padding: 0;
}

.disable-preset-menu:hover {
  background-color: $background;
}

.disable-preset-menu:disabled,
.disable-preset-menu[disabled]{
  background-color: inherit;
  color: #dddddd;
  opacity: 0.5;
  cursor: not-allowed;
  padding: 0;
} 

.disableSelect:disabled,
.disableSelect:disabled[disabled] {
  background-color: grey;
  opacity: 0.5;
  cursor: not-allowed;
}
.save-button:disabled,
.save-button:disabled[disabled] {
  background-color: grey;
  opacity: 0.5;
  cursor: not-allowed;
}
  .form-wrapper {
    position: relative;
  }

.icon {
  display: flex;
}

@media only screen and (max-width: 600px) {
  .list {
    position: relative;
   }
  .ion-datetime-start, .datepicker-input,.ion-datetime-end  {
    z-index: 1000;
    position: absolute;
    top:  2.05rem;
   }
 
   .preset-row {
    display: grid;
    padding-bottom: 1.5rem;

    .icon {
      justify-content: space-between;
    }
   }
   
  }

  ::ng-deep .mycomponent-wider-popover
  {
    --width: var(--width-of-popover);
  
  }

.my-progress {
  li {
    color :white
  }
}

.datetime-selected-date{
  margin-top: 0;
}

